crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__dark_confidant_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 496
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredTrigger": {
        "mode": "Phase",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "RevealTop",
            "player": {
              "type": "Controller"
            },
            "count": 1
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "ChangeZone",
              "origin": null,
              "destination": "Hand",
              "target": {
                "type": "ParentTarget"
              },
              "owner_library": false,
              "enter_transformed": false,
              "under_your_control": false,
              "enter_tapped": false,
              "enters_attacking": false
            },
            "cost": null,
            "sub_ability": {
              "kind": "Spell",
              "effect": {
                "type": "LoseLife",
                "amount": {
                  "type": "Ref",
                  "qty": {
                    "type": "EventContextSourceManaValue"
                  }
                },
                "target": {
                  "type": "Controller"
                }
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "sorcery_speed": false,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false,
              "sub_link": "SequentialSibling"
            },
            "duration": null,
            "description": null,
            "target_prompt": null,
            "sorcery_speed": false,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": null,
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": "Upkeep",
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "At the beginning of your upkeep, reveal the top card of your library and put that card into your hand. You lose life equal to its mana value.",
        "constraint": {
          "type": "OnlyDuringYourTurn"
        },
        "condition": null,
        "batched": false
      }
    }
  ],
  "source_text": "At the beginning of your upkeep, reveal the top card of your library and put that card into your hand. You lose life equal to its mana value.",
  "card_name": "Dark Confidant"
}
